--- a/docs/src/vars.styl
+++ b/docs/src/vars.styl
@@ -47,3 +47,6 @@ $blueDark = #4b83bf;
 $accent = hsl(195deg 88% 33%);
 
 $borderRadius = 12px;
+
+$breakHeaderLogo = 600px;
+$breakHeaderMenu = 485px;
