--- a/docs/src/components/Snippet.styl
+++ b/docs/src/components/Snippet.styl
@@ -12,6 +12,15 @@ $codeCommentsFg = var(--clr-codeCommentsFg);
 
 $headerBg = var(--clr-headerBg);
 
+$editorFontSize = 1.2rem;
+$editorResponsiveFontSize = 1.8vw;
+$editorMinFontSize = 14px;
+$editorMaxFontSize = 20px;
+// 100 * $editorMaxFontSize / $editorResponsiveFontSize
+$editorFontMaxOutWidth = 1111px;
+// 100 * $editorMinFontSize / $editorResponsiveFontSize
+$editorFontMinOutWidth = 777px;
+
 .window
   &.light
     --clr-codeBg: white;
@@ -32,9 +41,18 @@ $headerBg = var(--clr-headerBg);
   border-radius: $borderRadius;
   // box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
   box-shadow: $boxShadow;
+
+  font-size: $editorFontSize;
+  &-responsive
+    font-size: $editorResponsiveFontSize;
+    @media screen and (min-width: $editorFontMaxOutWidth)
+      font-size: $editorMaxFontSize
+    @media screen and (max-width: $editorFontMinOutWidth)
+      font-size: $editorMinFontSize;
+
   .header
-    flexRow("calc(%s / 2)" % $borderRadius);
-    padding: 0 $borderRadius;
+    flexRow($borderRadius);
+    padding: "calc(%s / 1.5)" % $borderRadius $borderRadius;
     align-items: center;
     border-top-left-radius: $borderRadius;
     border-top-right-radius: $borderRadius;
@@ -53,13 +71,13 @@ $headerBg = var(--clr-headerBg);
         &.green
           background-color: $appIconGreen;
     .name
-      font-size: .75rem;
+      line-height: 1;
+      font-size: .9rem;
       color: $codeFg;
-      padding: ("calc(%s / 2)" % $borderRadius) $borderRadius;
   .editor
     flexRow(1ch);
     background-color: unset;
-    font-size: 1.2rem;
+    
     .lines
       // font-size: .66rem;
       line-height: 1.35;
