--- a/docs/src/components/Logo.styl
+++ b/docs/src/components/Logo.styl
@@ -24,7 +24,8 @@ $logoSize = 48px;
     padding-bottom: calc(var(--logo-size) / 8);
     line-height: 1;
     // padding: 1.5rem 0.8rem 0rem 1.5rem;
-    border-radius: 10%;
+    border-bottom-left-radius: $borderRadius;
+    border-bottom-right-radius: $borderRadius;
     // background-color: darken(clrHeaderBg, 20);
     background-color: $accent;
     // box-shadow: $boxShadow;
