--- a/docs/src/utils.styl
+++ b/docs/src/utils.styl
@@ -29,3 +29,8 @@ flexColumn(gap = 0)
   display: flex;
   flex-direction: column;
   flexGapColumn(gap);
+
+flexCenter()
+  display: flex;
+  align-items: center;
+  justify-content: center;
