--- a/docs/src/App.styl
+++ b/docs/src/App.styl
@@ -50,13 +50,18 @@ main
     min-width: sectionMinWidth;
     padding: gapMedium;
     width: 80vw;
+    font-size: 16px;
+    @media screen and (max-width: $breakSnippetsColumn)
+      width: 100vw;
+      padding: 0 1rem;
+      max-width: unset;
     &.bleed
       max-width: 100vw;
       width: 100vw;
       margin: 0;
       padding: 0;
     h2 
-      font-family: fontTitle;
+      font-family: fontRegular;
       font-size: 2rem;
     ul
       flexColumn()
