--- a/docs/src/vars.styl
+++ b/docs/src/vars.styl
@@ -1,11 +1,3 @@
-clrHeaderBg ?= #4b8493
-clrHeaderFg ?= #f9f5f1
-clrBg ?= #fcfaf2
-clrFg ?= #242424
-clrCardBg ?= #39393A
-clrCardFg ?= #E6E6E6
-clrAccent ?= #ff0000
-
 // fontRegular = 'Source Sans Pro', sans-serif
 // fontRegular = 'Golos Text', sans-serif
 fontRegular = 'Noto Sans', sans-serif
@@ -43,10 +35,24 @@ $gray = #606060;
 $grayLight = #a0a0a0;
 $blue = #6cbdf0;
 $blueDark = #4b83bf;
+$whitePure = #ffffff;
 
+// $yellowLight = hsl(37deg 65% 91%)
+$yellowLight = #ecdec7;
 $accent = hsl(195deg 88% 33%);
+
+clrHeaderBg ?= #4b8493
+clrHeaderFg ?= #f9f5f1
+clrBg ?= $whitePure;
+clrFg ?= #242424
+clrCardBg ?= #39393A
+clrCardFg ?= #E6E6E6
+clrAccent ?= #ff0000
 
 $borderRadius = 12px;
 
 $breakHeaderLogo = 600px;
 $breakHeaderMenu = 485px;
+$breakDescCTA = 1000px;
+$breakSnippetsWrap = 768px;
+$breakSnippetsColumn = 570px;
