--- a/docs/src/vars.styl
+++ b/docs/src/vars.styl
@@ -25,17 +25,18 @@ $appIconRed = #ed614e;
 $appIconYellow = #e0b443;
 $appIconGreen = #54cc78;
 
-$red = #f26f7a;
-$purple = #b481f0;
-$yellow = #fcd86d;
-$orange = #eba652;
-$green = #53a372;
-$white = #c8c8c8;
-$gray = #606060;
-$grayLight = #a0a0a0;
+$black = #313131;
 $blue = #6cbdf0;
 $blueDark = #4b83bf;
+$gray = #606060;
+$grayLight = #a0a0a0;
+$green = #53a372;
+$orange = #eba652;
+$purple = #b481f0;
+$red = #f26f7a;
+$white = #c8c8c8;
 $whitePure = #ffffff;
+$yellow = #fcd86d;
 
 // $yellowLight = hsl(37deg 65% 91%)
 $yellowLight = #ecdec7;
