--- a/docs/src/vars.styl
+++ b/docs/src/vars.styl
@@ -26,7 +26,7 @@ $appIconYellow = #e0b443;
 $appIconGreen = #54cc78;
 
 $black = #313131;
-$blue = #6cbdf0;
+$blue = #50a3d7;
 $blueDark = #4b83bf;
 $gray = #606060;
 $grayLight = #a0a0a0;
