--- a/docs/src/components/Demo.styl
+++ b/docs/src/components/Demo.styl
@@ -243,8 +243,8 @@ darkTheme()
           cursor: pointer;
           transition: all 150ms ease-in;
           svg
-            width: 1rem;
-            height: 1rem;
+            width: 1em;
+            height: 1em;
           &-primary
             background-color: $accent;
             color: white;
