--- a/docs/src/components/Snippet.styl
+++ b/docs/src/components/Snippet.styl
@@ -24,7 +24,9 @@ $editorFontMinOutWidth = 777px;
 
 .window
   &.light
-    --clr-codeBg: hsl(40deg 22% 98%);
+    // --clr-codeBg: hsl(40deg 22% 98%);
+    --clr-codeBg: $codeBgLight;
+    // --clr-codeBg: #f9fafb;
     --clr-codeFg: black;
     --clr-headerBg: $yellowLight;
     --clr-borderBg: hsl(36deg 10% 87%);
