--- a/docs/src/vars.styl
+++ b/docs/src/vars.styl
@@ -39,8 +39,10 @@ $whitePure = #ffffff;
 $yellow = #fcd86d;
 
 // $yellowLight = hsl(37deg 65% 91%)
-$yellowLight = #ecdec7;
+$yellowLight = #faf2e4;
 $accent = hsl(195deg 88% 33%);
+
+$codeBgLight = #fffefd;
 
 clrHeaderBg ?= #4b8493
 clrHeaderFg ?= #f9f5f1
