--- a/docs/src/components/Snippet.styl
+++ b/docs/src/components/Snippet.styl
@@ -25,7 +25,7 @@ $editorFontMinOutWidth = 777px;
 .window
   &.light
     // --clr-codeBg: hsl(40deg 22% 98%);
-    --clr-codeBg: $codeBgLight;
+    --clr-codeBg: $codeBgLandingLight;
     // --clr-codeBg: #f9fafb;
     --clr-codeFg: black;
     --clr-headerBg: $yellowLight;
@@ -34,9 +34,9 @@ $editorFontMinOutWidth = 777px;
     --clr-boxShadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     --clr-codeCommentsFg: $grayLight;
   &.dark
-    --clr-codeBg: #22272e;
+    --clr-codeBg: $codeBgLandingDark;
     --clr-headerBg: #12171e;
-    --clr-borderBg: #f5f4f2;
+    --clr-borderBg: #434342;
     --clr-codeFg: white;
     --clr-boxShadow: rgba(0, 0, 0, 0.15) 0px 13px 27px -5px, rgba(0, 0, 0, 0.25) 0px 8px 16px -8px;
     --clr-codeCommentsFg: $gray;
