--- a/docs/src/components/MultilangWindow.styl
+++ b/docs/src/components/MultilangWindow.styl
@@ -15,13 +15,39 @@
     padding-left: $borderRadius;
     padding-bottom: 8px;
     .tab
+      position: relative;
       color: darken(white, 60);
       padding: .5rem .5rem;
-      border-bottom-left-radius: "calc(%s / 2)" % $borderRadius;
-      border-bottom-right-radius: "calc(%s / 2)" % $borderRadius;
+      // border-bottom-left-radius: "calc(%s / 2)" % $borderRadius;
+      // border-bottom-right-radius: "calc(%s / 2)" % $borderRadius;
       cursor: pointer;
+      // &:after
+      //     $size = 6px;
+      //     content: '';
+      //     position: absolute;
+      //     top: 3px;
+      //     left: calc(50% - 3px);
+      //     width: $size;
+      //     height: $size;
+      //     border-radius: 50%;
+      //     background-color: var(--clr-fgText);
+      //     transform: scale(0);
+      //     transition: transform 150ms ease-in;
+      &:after
+        content: '';
+        position: absolute;
+        top: 4px;
+        left: calc((100% - 60%)/2);
+        right: calc((100% - 60%)/2);
+        height: 4px;
+        background-color: var(--clr-bgBorder);
+        border-radius: 100vw;
+        transform: scaleX(0);
+        transition: transform 150ms ease-in;
       &:hover
-        color: black;
+        color: var(--clr-fgText);
       &-active
-        color: black;
-        text-decoration: underline;
+        &:after
+          transform: scaleX(1);
+        color: var(--clr-fgText);
+        // text-decoration: underline;
