--- a/docs/src/vars.styl
+++ b/docs/src/vars.styl
@@ -43,6 +43,21 @@ $yellowLight = #faf2e4;
 $accent = hsl(195deg 88% 33%);
 
 $codeBgLight = #fffefd;
+$bgColorLandingLight = #f2f5f6;
+$bgColorMainLight = white;
+$codeBgLandingLight = $bgColorMainLight;
+$codeBgMainLight = $bgColorLandingLight;
+$titleLight = #050505;
+$textLight = #313131;
+$bgBorderLight = #e0e4e5;
+
+$bgColorLandingDark = hsl(195deg 18% 10%);
+$bgColorMainDark = hsl(195deg 14% 15%);
+$codeBgLandingDark = $bgColorMainDark;
+$codeBgMainDark = $bgColorLandingDark;
+$titleDark = #f8f4e8;
+$textDark = #f5f1e5;
+$bgBorderDark = #41403c;
 
 clrHeaderBg ?= #4b8493
 clrHeaderFg ?= #f9f5f1
