--- a/docs/src/vars.styl
+++ b/docs/src/vars.styl
@@ -74,3 +74,7 @@ $breakHeaderMenu = 485px;
 $breakDescCTA = 1000px;
 $breakSnippetsWrap = 768px;
 $breakSnippetsColumn = 570px;
+
+$fontRegular = 'Noto Sans', sans-serif
+$fontTitle = 'Exo 2', sans-serif
+$fontMono = 'Ubuntu Mono', monospace
