--- a/vis/src/App.scss
+++ b/vis/src/App.scss
@@ -6,6 +6,12 @@
   align-items: center;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .main {
   max-width: 1200px;
   min-width: 320px;
@@ -36,5 +42,14 @@
 @media only screen and (min-width: 1200px) {
   .main {
     width: 1200px;
+  }
+}
+
+main {
+  .topbar-container {
+    .topbar {
+      max-width: 1200px;
+      min-width: 320px;
+    }
   }
 }
